--- a/Wanted.html
+++ b/Wanted.html
@@ -8,7 +8,7 @@
     <meta name="author" content="MD">
     <title>WANTED - King Von</title>
     <!-- Updated CSS path to be relative -->
-    <link rel="stylesheet" href="../CSS/Wanted.css">
+    <link rel="stylesheet" href="../Wanted.css">
 </head>
 
 <body>
@@ -42,6 +42,6 @@
     </main>
 
     <!-- Updated JavaScript path to be relative -->
-    <script src="../JAVA/Wanted.js"></script>
+    <script src="../Wanted.js"></script>
 </body>
 </html>
