--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to EchoSync - Home of Digital Projects">
     <title>Notice Board</title>
-    <link rel="stylesheet" href="../CSS/home.css"> <!-- Link to home page CSS -->
+    <link rel="stylesheet" href="../home.css"> <!-- Link to home page CSS -->
 </head>
 
 <body>
@@ -18,6 +18,6 @@
         <button id="go-to-wanted">View Wanted Poster</button>
     </main>
 
-    <script src="../JAVA/home.js"></script> <!-- Link to JavaScript -->
+    <script src="../home.js"></script> <!-- Link to JavaScript -->
 </body>
 </html>
